[修正] 租場狀況球隊id為非必填
